# api_server/app/src/profiles/dto/profile_for_edit.dto.ts
@@ -18,4 +18,6 @@ export class ProfileForEditDto {
   selfPromotion: string;
   experiencedProfessions: ExperiencedProfession[];
   experiencedProgrammingLanguages: ExperiencedProgrammingLanguage[];
+  skillsheetName?: string;
+  skillsheetData?: string;
 }
