# api_server/app/src/profiles/dto/update_profile.dto.ts
@@ -18,4 +18,6 @@ export class UpdateProfileDto {
   selfPromotion: string;
   experiencedProfessions: ExperiencedProfession[];
   experiencedProgrammingLanguages: ExperiencedProgrammingLanguage[];
+  skillsheetName?: string;
+  skillsheetData?: string;
 }
