# api_server/app/src/profiles/dto/update_profile_response.dto.ts
@@ -19,6 +19,8 @@ export class UpdateProfileResponseDto {
   selfPromotion: string;
   experiencedProfessions: ExperiencedProfession[];
   experiencedProgrammingLanguages: ExperiencedProgrammingLanguage[];
+  skillsheetName?: string;
+  skillsheetData?: string;
   @ApiProperty({
     example: ['姓は必須です。'],
   })
